--- a/theme.css
+++ b/theme.css
@@ -62,6 +62,10 @@ nav {
 
 /* Section/card styles */
 section {
+  display: block;
+  width: 100%;
+  overflow: wrap;
+  height: auto;
   background: var(--card);
   padding: 22px 16px;
   border-radius: var(--radius);
@@ -206,7 +210,7 @@ a:hover {
 }
 
 .subtitle {
-    color: #4e8ecf;
+    color: #dfeaf5;
     font-size: 1.2rem;
     margin-bottom: 20px;
 }
